src/main/gen/com/github/lordfirespeed/jetbrainsluau/lang/parser/_LuauParser.java
// This is a generated file. Not intended for manual editing.
package com.github.lordfirespeed.jetbrainsluau.lang.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.github.lordfirespeed.jetbrainsluau.lang.psi.LuauTypeHolder.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class _LuauParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return chunk(b, l + 1);
  }

  /* ********************************************************** */
  // 'function' FunctionBody
  public static boolean AnonymousFunction(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AnonymousFunction")) return false;
    if (!nextTokenIs(b, FUNCTION)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, FUNCTION);
    r = r && FunctionBody(b, l + 1);
    exit_section_(b, m, ANONYMOUS_FUNCTION, r);
    return r;
  }

  /* ********************************************************** */
  // VarList '=' ExpList
  public static boolean Assignment(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Assignment")) return false;
    if (!nextTokenIs(b, "<assignment>", IDENTIFIER, LPAREN)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGNMENT, "<assignment>");
    r = VarList(b, l + 1);
    r = r && consumeToken(b, EQ);
    r = r && ExpList(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '+' | '-' | '*' | '/' | '^' | '%' | '..' | '<' | '<=' | '>' | '>=' | '==' | '~=' | 'and' | 'or'
  public static boolean BinaryOp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BinaryOp")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BINARY_OP, "<binary op>");
    r = consumeToken(b, PLUS);
    if (!r) r = consumeToken(b, MINUS);
    if (!r) r = consumeToken(b, MUL);
    if (!r) r = consumeToken(b, DIV);
    if (!r) r = consumeToken(b, EXPONENT);
    if (!r) r = consumeToken(b, MOD);
    if (!r) r = consumeToken(b, CONCAT);
    if (!r) r = consumeToken(b, LT);
    if (!r) r = consumeToken(b, LE);
    if (!r) r = consumeToken(b, GT);
    if (!r) r = consumeToken(b, GE);
    if (!r) r = consumeToken(b, EQEQ);
    if (!r) r = consumeToken(b, NEQ);
    if (!r) r = consumeToken(b, AND);
    if (!r) r = consumeToken(b, OR);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // IDENTIFIER (':' Type)?
  public static boolean Binding(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Binding")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    r = r && Binding_1(b, l + 1);
    exit_section_(b, m, BINDING, r);
    return r;
  }

  // (':' Type)?
  private static boolean Binding_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Binding_1")) return false;
    Binding_1_0(b, l + 1);
    return true;
  }

  // ':' Type
  private static boolean Binding_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Binding_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COLON);
    r = r && Type(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // Binding (',' BindingList)?
  public static boolean BindingList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BindingList")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Binding(b, l + 1);
    r = r && BindingList_1(b, l + 1);
    exit_section_(b, m, BINDING_LIST, r);
    return r;
  }

  // (',' BindingList)?
  private static boolean BindingList_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BindingList_1")) return false;
    BindingList_1_0(b, l + 1);
    return true;
  }

  // ',' BindingList
  private static boolean BindingList_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BindingList_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && BindingList(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // SimpleExp ('::' Type)?
  static boolean CastExp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CastExp")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = SimpleExp(b, l + 1);
    r = r && CastExp_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ('::' Type)?
  private static boolean CastExp_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CastExp_1")) return false;
    CastExp_1_0(b, l + 1);
    return true;
  }

  // '::' Type
  private static boolean CastExp_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CastExp_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "::");
    r = r && Type(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // QUOTE (StringEscape | CHAR_STRING_TEXT)* QUOTE
  public static boolean CharString(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CharString")) return false;
    if (!nextTokenIs(b, QUOTE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, QUOTE);
    r = r && CharString_1(b, l + 1);
    r = r && consumeToken(b, QUOTE);
    exit_section_(b, m, CHAR_STRING, r);
    return r;
  }

  // (StringEscape | CHAR_STRING_TEXT)*
  private static boolean CharString_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CharString_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!CharString_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "CharString_1", c)) break;
    }
    return true;
  }

  // StringEscape | CHAR_STRING_TEXT
  private static boolean CharString_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CharString_1_0")) return false;
    boolean r;
    r = StringEscape(b, l + 1);
    if (!r) r = consumeToken(b, CHAR_STRING_TEXT);
    return r;
  }

  /* ********************************************************** */
  // Var CompoundOp Exp
  public static boolean CompoundAssignment(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CompoundAssignment")) return false;
    if (!nextTokenIs(b, "<compound assignment>", IDENTIFIER, LPAREN)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COMPOUND_ASSIGNMENT, "<compound assignment>");
    r = Var(b, l + 1);
    r = r && CompoundOp(b, l + 1);
    r = r && Exp(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '+=' | '-=' | '*=' | '/=' | '%=' | '^=' | '..='
  public static boolean CompoundOp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CompoundOp")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COMPOUND_OP, "<compound op>");
    r = consumeToken(b, PLUSEQ);
    if (!r) r = consumeToken(b, MINUSEQ);
    if (!r) r = consumeToken(b, MULEQ);
    if (!r) r = consumeToken(b, DIVEQ);
    if (!r) r = consumeToken(b, MODEQ);
    if (!r) r = consumeToken(b, EXPONENTEQ);
    if (!r) r = consumeToken(b, CONCATEQ);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'do' block 'end'
  public static boolean DoBlock(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DoBlock")) return false;
    if (!nextTokenIs(b, DO)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DO);
    r = r && block(b, l + 1);
    r = r && consumeToken(b, END);
    exit_section_(b, m, DO_BLOCK, r);
    return r;
  }

  /* ********************************************************** */
  // 'else' block
  public static boolean ElseBlock(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ElseBlock")) return false;
    if (!nextTokenIs(b, ELSE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ELSE);
    r = r && block(b, l + 1);
    exit_section_(b, m, ELSE_BLOCK, r);
    return r;
  }

  /* ********************************************************** */
  // 'elseif' Exp 'then' block
  public static boolean ElseIfBlock(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ElseIfBlock")) return false;
    if (!nextTokenIs(b, ELSEIF)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ELSEIF);
    r = r && Exp(b, l + 1);
    r = r && consumeToken(b, THEN);
    r = r && block(b, l + 1);
    exit_section_(b, m, ELSE_IF_BLOCK, r);
    return r;
  }

  /* ********************************************************** */
  // (CastExp ( BinaryOp Exp )*) | (UnaryOp Exp ( BinaryOp Exp )*)
  public static boolean Exp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Exp")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXP, "<exp>");
    r = Exp_0(b, l + 1);
    if (!r) r = Exp_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // CastExp ( BinaryOp Exp )*
  private static boolean Exp_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Exp_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = CastExp(b, l + 1);
    r = r && Exp_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ( BinaryOp Exp )*
  private static boolean Exp_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Exp_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!Exp_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Exp_0_1", c)) break;
    }
    return true;
  }

  // BinaryOp Exp
  private static boolean Exp_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Exp_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = BinaryOp(b, l + 1);
    r = r && Exp(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // UnaryOp Exp ( BinaryOp Exp )*
  private static boolean Exp_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Exp_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = UnaryOp(b, l + 1);
    r = r && Exp(b, l + 1);
    r = r && Exp_1_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ( BinaryOp Exp )*
  private static boolean Exp_1_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Exp_1_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!Exp_1_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Exp_1_2", c)) break;
    }
    return true;
  }

  // BinaryOp Exp
  private static boolean Exp_1_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Exp_1_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = BinaryOp(b, l + 1);
    r = r && Exp(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // (Exp ',')* Exp
  public static boolean ExpList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ExpList")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXP_LIST, "<exp list>");
    r = ExpList_0(b, l + 1);
    r = r && Exp(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (Exp ',')*
  private static boolean ExpList_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ExpList_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!ExpList_0_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ExpList_0", c)) break;
    }
    return true;
  }

  // Exp ','
  private static boolean ExpList_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ExpList_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Exp(b, l + 1);
    r = r && consumeToken(b, COMMA);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ('[' Exp ']' '=' Exp) | (IDENTIFIER '=' Exp) | Exp
  public static boolean Field(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Field")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FIELD, "<field>");
    r = Field_0(b, l + 1);
    if (!r) r = Field_1(b, l + 1);
    if (!r) r = Exp(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // '[' Exp ']' '=' Exp
  private static boolean Field_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Field_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACK);
    r = r && Exp(b, l + 1);
    r = r && consumeTokens(b, 0, RBRACK, EQ);
    r = r && Exp(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // IDENTIFIER '=' Exp
  private static boolean Field_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Field_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, IDENTIFIER, EQ);
    r = r && Exp(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // Field (FieldSep Field)* (FieldSep)?
  public static boolean FieldList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FieldList")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FIELD_LIST, "<field list>");
    r = Field(b, l + 1);
    r = r && FieldList_1(b, l + 1);
    r = r && FieldList_2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (FieldSep Field)*
  private static boolean FieldList_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FieldList_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!FieldList_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "FieldList_1", c)) break;
    }
    return true;
  }

  // FieldSep Field
  private static boolean FieldList_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FieldList_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = FieldSep(b, l + 1);
    r = r && Field(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (FieldSep)?
  private static boolean FieldList_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FieldList_2")) return false;
    FieldList_2_0(b, l + 1);
    return true;
  }

  // (FieldSep)
  private static boolean FieldList_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FieldList_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = FieldSep(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ',' | ';'
  public static boolean FieldSep(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FieldSep")) return false;
    if (!nextTokenIs(b, "<field sep>", COMMA, SEMI)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FIELD_SEP, "<field sep>");
    r = consumeToken(b, COMMA);
    if (!r) r = consumeToken(b, SEMI);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'for' Binding '=' Exp ',' Exp [',' Exp] 'do' block 'end'
  public static boolean ForRangeBlock(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ForRangeBlock")) return false;
    if (!nextTokenIs(b, FOR)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, FOR);
    r = r && Binding(b, l + 1);
    r = r && consumeToken(b, EQ);
    r = r && Exp(b, l + 1);
    r = r && consumeToken(b, COMMA);
    r = r && Exp(b, l + 1);
    r = r && ForRangeBlock_6(b, l + 1);
    r = r && consumeToken(b, DO);
    r = r && block(b, l + 1);
    r = r && consumeToken(b, END);
    exit_section_(b, m, FOR_RANGE_BLOCK, r);
    return r;
  }

  // [',' Exp]
  private static boolean ForRangeBlock_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ForRangeBlock_6")) return false;
    ForRangeBlock_6_0(b, l + 1);
    return true;
  }

  // ',' Exp
  private static boolean ForRangeBlock_6_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ForRangeBlock_6_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && Exp(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // 'for' BindingList 'in' ExpList 'do' block 'end'
  public static boolean ForValuesBlock(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ForValuesBlock")) return false;
    if (!nextTokenIs(b, FOR)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, FOR);
    r = r && BindingList(b, l + 1);
    r = r && consumeToken(b, IN);
    r = r && ExpList(b, l + 1);
    r = r && consumeToken(b, DO);
    r = r && block(b, l + 1);
    r = r && consumeToken(b, END);
    exit_section_(b, m, FOR_VALUES_BLOCK, r);
    return r;
  }
